fixed whitespaces, added double-quoted strings in fontello.scss, syntax error in style.scss

--- a/Task1_KFox/app/scss/styles.scss
+++ b/Task1_KFox/app/scss/styles.scss
@@ -138,7 +138,7 @@ body {
 		background-image: none;
 	}
 
-	&.menu-on { left: calc(100vw - #{px(2rem)} - 2*#{$pad)}; }
+	&.menu-on { left: calc(100vw - #{px(2rem)} - 2*#{$pad} ); }
 }
 
 img { vertical-align: top; }
